[package]
name = "cliscord"
version = "0.0.2"
description = "cli tool to send (and receive) single discord messages"
license = "MIT"
authors = ["somebody1234 <ehern.lee@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
dirs = "4"
infer = { version = "0.9", optional = true }

[features]
default = ["filetype", "token"]
filetype = ["infer"]
token = []

